After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667746 - seeking to end should not reset video player
seeking to end should not reset video player
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: GStreamer backend
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Maintainer alias for GStreamer component of Totem
Maintainer alias for GStreamer component of Totem
Depends on:
Blocks:
 
 
Reported: 2012-01-12 11:17 UTC by j^
Modified: 2012-07-15 00:04 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description j^ 2012-01-12 11:17:23 UTC
if one seeks in a video, if you hit the end of the video, the timeline is reset and the video goes away.

instead the player should display the last frame and allow users to continue seeking around.
Comment 1 Bastien Nocera 2012-07-15 00:04:58 UTC
commit 5b1d9bab325d65f1a8a35244424523b9ceb17194
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sun Jul 15 01:03:11 2012 +0100

    backend: Don't throw EOS when seeking past the end
    
    If we're already playing, seeking to the end will cause an EOS anyway.
    And if we're paused, then one can carry on seeking around (though
    mostly back I'm guessing).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667746