backend: Don't throw EOS when seeking past the end

If we're already playing, seeking to the end will cause an EOS anyway.
And if we're paused, then one can carry on seeking around (though
mostly back I'm guessing).

https://bugzilla.gnome.org/show_bug.cgi?id=667746